2005-02-24  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/timer.c (xntimer_do_timers): Dequeue an elapsed timer
	before calling its handler, so that xntimer_stop() called on
	behalf of the latter won't attempt to stop it uselessly
	(e.g. xnpod_resume_thread()).
	(xntimer_do_timers): Update the reference time inside the inner
	processing loop for aperiodic support.

	* nucleus/shadow.c: Add support for switch back syscall mode,
	resetting the original exec mode for the caller after a switch has
	been made to process the syscall.

	* nucleus/pod.c: Move consistency checks to (OPT_DEBUG || SIM)
	sections.

2005-02-23  Dmitry Adamushko  <dmitry.adamushko@datacon.at>

	* skins/rtai/registry.c (rt_registry_enter): Prevent from
	thundering herd effect while waking up several tasks which
	concurrently undergo a binding wait. This is done by selectively
	resuming them upon new object registration depending on the key
	they currently sleep on.

2005-02-23  Jan Kiszka <kiszka@rts.uni-hannover.de>

	* nucleus/module.c (sched_read_proc): Fix shifted timeout reports
	by using a stable time base.

2005-02-22  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/lib/fusion.c, skins/rtai/lib/task.c: Remove implicit
	mlockall() from task creation code.
	
	* testsuite: Add explicit mlockall() to user-space apps.

2005-02-21  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-i386/system.h (xnarch_remap_page_range):
	Stop using deprecated remap_page_range() for kernels >= 2.6.10.

	* arch/i386/patches: Upgrade to Adeos 2.6.9,10-i386-r9c4.

	* arch/ppc/patches: Upgrade to Adeos 2.6.10-ppc-r6c13.

	* include/nucleus/asm-i386/system.h (xnarch_switch_to): Eagerly
	reinstate the I/O bitmap of any incoming shadow thread which has
	previously requested I/O permissions. This prevents lazy update
	upon fault of the I/O bitmap for shadow threads that explicitely
	told the kernel that they would need to perform raw I/O ops.

	* TROUBLESHOOTING: Start troubleshooting guide.
